@startuml CSDL_TongThe
title Sơ đồ CSDL - Tổng thể (Entity Relationship)

skinparam linetype ortho
hide circle
skinparam classFontSize 11

' ═══════════════════════════════════════════
' NHÓM 1: TÀI KHOẢN
' ═══════════════════════════════════════════
entity "users" as users {
  *id : bigint <<PK>>
  --
  ho_ten : varchar(255)
  email : varchar(255) <<unique>>
  password : varchar(255)
  role : enum(admin,giang_vien,hoc_vien)
  so_dien_thoai : varchar(15)
  is_active : tinyint(1)
  otp : varchar(6)
  otp_expires_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "giang_vien" as giang_vien {
  *id : bigint <<PK>>
  --
  *user_id : bigint <<FK>>
  chuyen_mon : enum(ly_thuyet,thuc_hanh,ca_hai)
  bang_cap : varchar(255)
  nam_kinh_nghiem : int
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

' ═══════════════════════════════════════════
' NHÓM 2: HỒ SƠ & HỌC PHÍ
' ═══════════════════════════════════════════
entity "ho_so_hoc_vien" as ho_so {
  *id : bigint <<PK>>
  --
  user_id : bigint <<FK>>
  *khoa_hoc_id : bigint <<FK>>
  ho_ten : varchar(100)
  ngay_sinh : date
  so_cccd : varchar(20) <<unique>>
  dia_chi : varchar(255)
  so_dien_thoai : varchar(15)
  email : varchar(255)
  anh_the : varchar(255)
  nguon_dang_ky : enum(online,offline)
  trang_thai_hoc_phi : enum(chua_dong,da_dong)
  hoc_phi_da_dong : decimal(12,2)
  ngay_dong_hoc_phi : timestamp
  trang_thai : enum(...)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "thanh_toan_hoc_phi" as tt_hoc_phi {
  *id : bigint <<PK>>
  --
  *ho_so_id : bigint <<FK>>
  so_tien : decimal(12,2)
  phuong_thuc : enum(tien_mat,chuyen_khoan,vnpay,momo)
  ma_giao_dich : varchar(255)
  trang_thai : enum(cho_xu_ly,thanh_cong,that_bai)
  nguoi_thu : varchar(255)
  ghi_chu : text
  ngay_thanh_toan : timestamp
  created_at : timestamp
  updated_at : timestamp
}

' ═══════════════════════════════════════════
' NHÓM 3: KHÓA HỌC & LỚP HỌC
' ═══════════════════════════════════════════
entity "khoa_hoc" as khoa_hoc {
  *id : bigint <<PK>>
  --
  ten_khoa : varchar(255)
  mo_ta : text
  loai_bang : enum(A1,A,B1,B2,C1,C,D,E,CE)
  hoc_phi : decimal(12,2)
  so_buoi_ly_thuyet_toi_thieu : int
  so_km_toi_thieu : int
  si_so_toi_da : int
  so_hv_mo_lop : int
  is_active : tinyint(1)
  created_at : timestamp
  updated_at : timestamp
}

entity "lop_hoc" as lop_hoc {
  *id : bigint <<PK>>
  --
  *khoa_hoc_id : bigint <<FK>>
  ten_lop : varchar(255)
  giang_vien_ly_thuyet_id : bigint <<FK>>
  giang_vien_thuc_hanh_id : bigint <<FK>>
  ngay_khai_giang : date
  ngay_ket_thuc : date
  si_so_toi_da : int
  trang_thai : enum(chuan_bi,dang_hoc,da_ket_thuc)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "hoc_vien_lop" as hv_lop {
  *id : bigint <<PK>>
  --
  *ho_so_id : bigint <<FK>>
  *lop_hoc_id : bigint <<FK>>
  ngay_xep_lop : date
  so_buoi_ly_thuyet_da_hoc : int
  so_buoi_thuc_hanh_da_hoc : int
  so_km_da_chay : decimal(8,2)
  du_buoi_ly_thuyet : tinyint(1)
  du_km_thuc_hanh : tinyint(1)
  du_dieu_kien_thi_tn : tinyint(1)
  created_at : timestamp
  updated_at : timestamp
}

' ═══════════════════════════════════════════
' NHÓM 4: LỊCH HỌC & ĐIỂM DANH
' ═══════════════════════════════════════════
entity "lich_hoc" as lich_hoc {
  *id : bigint <<PK>>
  --
  *lop_hoc_id : bigint <<FK>>
  xe_id : bigint <<FK>>
  ngay_hoc : date
  gio_bat_dau : time
  gio_ket_thuc : time
  loai_buoi : enum(ly_thuyet,thuc_hanh)
  dia_diem : varchar(255)
  noi_dung : text
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "diem_danh" as diem_danh {
  *id : bigint <<PK>>
  --
  *lich_hoc_id : bigint <<FK>>
  *ho_so_id : bigint <<FK>>
  co_mat : tinyint(1)
  km_chay : decimal(6,2)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

' ═══════════════════════════════════════════
' NHÓM 5: THI CỬ & CHỨNG CHỈ
' ═══════════════════════════════════════════
entity "bai_thi" as bai_thi {
  *id : bigint <<PK>>
  --
  *khoa_hoc_id : bigint <<FK>>
  ten_bai_thi : varchar(255)
  loai : enum(tot_nghiep,sat_hanh)
  diem_dat : decimal(5,2)
  phi_thi_lai : decimal(10,2)
  thu_tu : int
  created_at : timestamp
  updated_at : timestamp
}

entity "lich_thi" as lich_thi {
  *id : bigint <<PK>>
  --
  *khoa_hoc_id : bigint <<FK>>
  loai_thi : enum(tot_nghiep,sat_hanh)
  ngay_thi : date
  gio_thi : time
  dia_diem : varchar(255)
  don_vi_to_chuc : varchar(255)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "ket_qua_thi" as kq_thi {
  *id : bigint <<PK>>
  --
  *ho_so_id : bigint <<FK>>
  *lich_thi_id : bigint <<FK>>
  *bai_thi_id : bigint <<FK>>
  diem : decimal(5,2)
  ket_qua : enum(dat,khong_dat,vang_mat)
  lan_thi : int
  phi_thi_lai : decimal(10,2)
  da_thu_phi : tinyint(1)
  nhan_xet : text
  created_at : timestamp
  updated_at : timestamp
}

entity "bang_tot_nghiep" as bang_tn {
  *id : bigint <<PK>>
  --
  *ho_so_id : bigint <<FK>>
  so_bang : varchar(255) <<unique>>
  ngay_cap : date
  trang_thai : enum(da_cap,cap_lai)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "bang_lai_xe" as bang_lai {
  *id : bigint <<PK>>
  --
  *ho_so_id : bigint <<FK>>
  so_bang_lai : varchar(255) <<unique>>
  ho_ten_chu_bang : varchar(255)
  ngay_sinh_chu_bang : date
  so_cccd_chu_bang : varchar(20)
  loai_bang : enum(A1,A2,B1,B2,C,D,E)
  ngay_cap : date
  ngay_het_han : date
  co_quan_cap : varchar(255)
  dia_chi_co_quan_cap : varchar(255)
  trang_thai : enum(cho_cap,da_cap,cap_lai,thu_hoi)
  ngay_cap_thuc_te : timestamp
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

' ═══════════════════════════════════════════
' NHÓM 6: XE
' ═══════════════════════════════════════════
entity "xe" as xe {
  *id : bigint <<PK>>
  --
  bien_so : varchar(20) <<unique>>
  hang_xe : varchar(50)
  dong_xe : varchar(50)
  nam_san_xuat : year
  loai_xe : enum(so_san,so_tu_dong)
  hang_bang : enum(A1,A,B1,B2,C1,C,D,E,CE)
  mau_xe : varchar(30)
  so_km_hien_tai : int
  ngay_dang_kiem : date
  ngay_dang_kiem_tiep_theo : date
  ngay_bao_hiem : date
  trang_thai : enum(san_sang,dang_su_dung,bao_tri,hong,nghi_huu)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "bao_loi_xe" as bao_loi {
  *id : bigint <<PK>>
  --
  *xe_id : bigint <<FK>>
  *giang_vien_id : bigint <<FK>>
  lich_hoc_id : bigint <<FK>>
  tieu_de : varchar(200)
  mo_ta : text
  muc_do : enum(nhe,trung_binh,nghiem_trong)
  trang_thai : enum(cho_xu_ly,dang_xu_ly,da_xu_ly)
  ghi_chu_xu_ly : text
  ngay_xu_ly : timestamp
  created_at : timestamp
  updated_at : timestamp
}

' ═══════════════════════════════════════════
' QUAN HỆ
' ═══════════════════════════════════════════
users ||--o| giang_vien
users ||--o| ho_so

ho_so }o--|| khoa_hoc
ho_so ||--o{ tt_hoc_phi
ho_so ||--o| hv_lop
ho_so ||--o{ kq_thi
ho_so ||--o| bang_tn
ho_so ||--o| bang_lai

khoa_hoc ||--o{ lop_hoc
khoa_hoc ||--o{ bai_thi
khoa_hoc ||--o{ lich_thi

lop_hoc ||--o{ hv_lop
lop_hoc ||--o{ lich_hoc
giang_vien |o--o{ lop_hoc
lich_hoc ||--o{ diem_danh

lich_thi ||--o{ kq_thi
bai_thi ||--o{ kq_thi

xe ||--o{ lich_hoc
xe ||--o{ bao_loi
giang_vien ||--o{ bao_loi
lich_hoc |o--o{ bao_loi

@enduml
